--- a/Game.html
+++ b/Game.html
@@ -18,6 +18,7 @@
 		<script type="application/javascript" src="player.js"></script>
 		<script type="application/javascript" src="init.js"></script>
 		<script type="application/javascript" src="spells.js"></script>
+		<script type="application/javascript" src="animations.js"></script>
 	</body>
 	</head>
 	<body onload="start();">
